--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <!--first sect starting-->
-    <div class="portfolio">
+    <div >
       <div class="sec1">
         <a href="#" class="sec2">About</a>
         <a href="#" class="sec2">Work</a>
